readme & first publish

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "wb-vue-util",
+	"name": "weddingbook-vue-util",
 	"version": "1.0.0",
 	"private": false,
 	"description": "웨딩북 Vue용 Util",
